--- a/deploy.yaml
+++ b/deploy.yaml
@@ -21,10 +21,14 @@ spec:
             - name: ADDRESS
               value: "kubemq-cluster-grpc"
             - name: SEND
-              value: "1000"
+              value: "100"
             - name: THREADS
-              value: "1"
+              value: "20"
             - name: QUEUE
-              value: "q"
+              value: "w"
             - name: ROUNDS
+              value: "0"
+            - name: ACK_DELAY
               value: "10"
+            - name: RECEIVERS
+              value: "1"
